src/snapshots/ruff__linter__tests__b011.snap
---
source: src/linter.rs
expression: checks
---
- kind: DoNotAssertFalse
  location:
    row: 2
    column: 8
  end_location:
    row: 2
    column: 13
  fix:
    content: raise AssertionError()
    location:
      row: 2
      column: 1
    end_location:
      row: 2
      column: 13
    applied: false
- kind: DoNotAssertFalse
  location:
    row: 4
    column: 8
  end_location:
    row: 4
    column: 13
  fix:
    content: "raise AssertionError(\"message\")"
    location:
      row: 4
      column: 1
    end_location:
      row: 4
      column: 24
    applied: false

