src/snapshots/ruff__linter__tests__c400.snap
---
source: src/linter.rs
expression: checks
---
- kind: UnnecessaryGeneratorList
  location:
    row: 1
    column: 5
  end_location:
    row: 1
    column: 30
  fix: ~

