src/snapshots/ruff__linter__tests__c411.snap
---
source: src/linter.rs
expression: checks
---
- kind: UnnecessaryListCall
  location:
    row: 2
    column: 1
  end_location:
    row: 2
    column: 21
  fix: ~

