src/snapshots/ruff__linter__tests__c415.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    UnnecessarySubscriptReversal: set
  location:
    row: 2
    column: 5
  end_location:
    row: 2
    column: 19
  fix: ~
- kind:
    UnnecessarySubscriptReversal: reversed
  location:
    row: 3
    column: 5
  end_location:
    row: 3
    column: 24
  fix: ~
- kind:
    UnnecessarySubscriptReversal: sorted
  location:
    row: 4
    column: 5
  end_location:
    row: 4
    column: 22
  fix: ~
- kind:
    UnnecessarySubscriptReversal: sorted
  location:
    row: 5
    column: 5
  end_location:
    row: 5
    column: 36
  fix: ~

