src/snapshots/ruff__linter__tests__d101.snap
---
source: src/linter.rs
expression: checks
---
- kind: PublicClass
  location:
    row: 14
    column: 1
  end_location:
    row: 67
    column: 1
  fix: ~

