src/snapshots/ruff__linter__tests__d201.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    NoBlankLineBeforeFunction: 1
  location:
    row: 132
    column: 5
  end_location:
    row: 132
    column: 25
  fix: ~
- kind:
    NoBlankLineBeforeFunction: 1
  location:
    row: 146
    column: 5
  end_location:
    row: 146
    column: 38
  fix: ~

